# sine_wave_speech

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  quantization_plot.ipynb  sine_wave_speech_example.ipynb  sws.ipynb
frontend/: .prettierignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/explanation/: index.html
frontend/live/: index.html
frontend/src/: App.vue  DebugApp.vue  audio.ts  dataFiles.ts  main.ts  smoother.ts  style.css  tailwindColors.ts  types.ts
frontend/src/assets/: ag-cook-clip.json  explanation-1-short.json  explanation-1-short.srt  explanation-1.json  explanation-1.srt  explanation-2.json  explanation-2.srt  sentence-sine-wave.json  virgil-abloh-clip-short.json  virgil-abloh-clip.json
frontend/src/components/: Controls.vue  Header.vue  HelloWorld.vue  Page.vue  SineWave.vue  SineWaveVisualization.vue  Visualizations.vue
frontend/src/live/: LiveApp.vue  LiveVisualization.vue  audioUtils.ts  main.ts  sineWaveSpeechNode.ts  sineWaveSpeechProcessor.ts  synthesisParameters.ts  types.ts  webaudioUtils.ts  worklet.d.ts
frontend/src/live/components/: Button.vue  LiveVisualization.vue  ParameterControls.vue  ParameterSlider.vue  PlaybackControls.vue  Slider.vue  SynthesisParameterControls.vue  Toggle.vue
frontend/src/stores/: messageStore.ts  playbackStore.ts
frontend/src/wasm_realtime_sws/: LICENSE_MIT  TextEncoder.js  package.json  wasm_audio.d.ts  wasm_audio.js  wasm_audio_bg.wasm  wasm_audio_bg.wasm.d.ts
matlab/: lpca2frq.m  readswi.m  s1pars.swi  s6pars.swi  swsmodel.m
matlab_code_archive/: README.md  lpcfit.m  lpcsynth.m  readswi.m  swsmodel.m  synthtrax.m
sine_wave_speech/: create_fixtures_for_rust.py  export.py  lpc.py  synthesis.py
tests/: test_lpc.py
wasm_realtime_sws/: Cargo.toml  README.md  compile_to_wasm.sh  live_compile.sh
wasm_realtime_sws/fixtures/: fit_lpc_results.msgpack  python_sws_results.msgpack
wasm_realtime_sws/polyfill/: TextEncoder.js
wasm_realtime_sws/src/: lib.rs  linear_algebra.rs  lpc.rs  music.rs  signal_processing.rs  synthesis.rs  utils.rs
