[tool.poetry]
name = "sine-wave-speech"
version = "0.1.0"
description = ""
authors = ["VaÌclav Volhejn <vaclav.volhejn@gmail.com>"]
readme = "README.md"
packages = [{include = "sine_wave_speech"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pytest = "^7.3.0"
scipy = "^1.10.1"
librosa = "^0.9.2"
matplotlib = "^3.5.1"
msgpack = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
