[package]
name = "wasm-audio"
version = "0.1.0"
authors = ["Václav Volhejn <vaclav.volhejn@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
pitch-detection = "0.1"
ndarray = {"version" = "0.16.1", features = ["serde"]}
thiserror = "1.0"
web-sys = { version = "0.3", features = ["console"] }
rustfft = "6.2.0"
approx = "0.5.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.210", features = ["serde_derive"] }
rmp-serde = "1.3.0"
nalgebra = "0.33.1"
nshare = "0.10.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
